if(WIN32)
  set(SOCKET_LIBS wsock32 ws2_32)
else()
  set(SOCKET_LIBS "")
endif()
add_library (psx src/sim_connection.cpp src/wire_pair.cpp src/sim_connection_sdl)
target_compile_features(psx PRIVATE cxx_delegating_constructors) 
target_link_libraries(psx PUBLIC ${SDL2_LIBRARIES} ${SOCKET_LIBS})
target_link_directories(psx PUBLIC ${SDL2_LIBRARY_DIRS})
target_include_directories(psx PUBLIC ${SDL2_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
